# sales-intelligence-platform

./: .gitignore  Dockerfile  LICENSE  Makefile  PTU_Industrial_Training_Report_Sales_Intelligence_Platform.docx  README.md  Sales_Intelligence_Platform_Report.docx  TODO.md  app.py  business_insights.md  clean_sales_data.py  docker-compose.yml  eda_sales.py  enrich_sales_data.py  generate_dataset.py  generate_report.py  load_db.py  make_ptu_industrial_training_report.py  powerbi_sales_dashboard_guide.md  project-overview.md  pyproject.toml  requirements.txt  sales.db  sales_prediction.py  sales_sql_queries.sql  setup.bat
.github/workflows/: ci.yml
.streamlit/: config.toml
dataset/: cleaned_sales_dataset.csv  enriched_sales_dataset.csv  sales_dataset_5500.csv
tests/: test_data_pipeline.py  test_database_and_ml.py
