[project]
name = "sales-intelligence-platform"
version = "2.0.0"
description = "Enterprise-grade Sales & Customer Intelligence Platform with ML, forecasting, and interactive analytics"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tushar Chugh"}
]
keywords = ["data-science", "machine-learning", "analytics", "dashboard", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "pandas==3.0.2",
    "numpy==2.4.4",
    "scikit-learn==1.8.0",
    "matplotlib==3.10.8",
    "seaborn==0.13.2",
    "streamlit==1.56.0",
    "plotly==6.7.0",
    "prophet==1.3.0",
    "mlxtend==0.25.0",
    "fpdf2==2.8.7",
    "xgboost==2.1.3",
    "lightgbm==4.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-cov==6.0.0",
]

[project.scripts]
sales-pipeline = "clean_sales_data:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E501"]
